--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,10 @@
 * {
-  font-family: "lato", sans-serif;
+  font-family: "lato", Badaboom;
   font-weight: bold;
 }
 
 body {
-  background: #f5f5dc;
+  background: #90EE90;
 
   color: #333333;
   margin-top: 20px;
