--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,12 @@
 * {
   font-family: "lato", Badaboom;
-  font-weight: bold;
+  font-weight: bold, italic;
 }
 
 body {
-  background: #90EE90;
+  background: #000000;
 
-  color: #333333;
+  color: #ffffff;
   margin-top: 20px;
 }
 
